reworked classes. Added unit tests