@@ -1,8 +1,10 @@
 package az.edu.strangers;
 
 import java.util.Arrays;
+import java.util.Objects;
 
 public class Family {
+
     private Human father;
     private Human mother;
     private Pet pet;
@@ -21,8 +23,10 @@ public class Family {
     public Family(Human father, Human mother) {
         this.father = father;
         this.mother = mother;
-        this.children = new Human[1];
+        this.children = new Human[0];
         childrenCount = 0;
+        mother.setFamily(this);
+        father.setFamily(this);
     }
 
     public Human getFather() {
@@ -66,23 +70,35 @@ public class Family {
     }
 
     public void addChild(Human child) {
+        children = Arrays.copyOf(children, children.length + 1);
         this.children[childrenCount] = child;
         child.setFamily(this);
         childrenCount++;
-        children = Arrays.copyOf(children, children.length + 1);
-
     }
 
     public boolean deleteChild(int index) {
-        if (index >= 0 && index < childrenCount) {
-            Human child = children[index];
-            child.setFamily(null);
-            for (int i = index; i < childrenCount - 1; i++) {
-                children[i] = children[i + 1];
+        if (index >= 0 && index < children.length) {
+            Human[] newChildren = new Human[children.length - 1];
+            for (int i = 0, k = 0; i < children.length; i++) {
+                if (i == index) {
+                    continue;
+                }
+                newChildren[k++] = children[i];
             }
-            children[childrenCount - 1] = null;
-            childrenCount--;
+            children[index].setFamily(null);
+            children = newChildren;
             return true;
+        }
+        return false;
+    }
+
+    public boolean deleteChild(Human child) {
+        for (int i = 0; i < children.length; i++) {
+            if (children[i].equals(child)) {
+                children[i] = null;
+                children = Arrays.copyOf(children, childrenCount - 1);
+                return true;
+            }
         }
         return false;
     }
@@ -93,12 +109,21 @@ public class Family {
 
     @Override
     public String toString() {
-        return String.format("{ Family: father=%s, mother=%s, pet=%s, children=%s, childrenCount=%d",
-                father != null ? getFather().toString() : "null",
-                mother != null ? getMother().toString() : "null",
-                pet != null ? getPet().toString() : "null",
-                Arrays.toString(children),
-                childrenCount != null ? childrenCount : 0);
+        return String.format("Family{mother=%s, father=%s, children=%s, pet=%s", father != null ? "%s %s".formatted(father.getName(), father.getSurname()) : "null", mother != null ? "%s %s".formatted(mother.getName(), mother.getSurname()) : "null", Arrays.toString(children), pet != null ? getPet().toString() : "null");
     }
 
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Family family = (Family) o;
+        return Objects.equals(mother, family.mother) && Objects.equals(father, family.father) && Arrays.equals(children, family.children) && Objects.equals(pet, family.pet);
+    }
+
+    @Override
+    public int hashCode() {
+        int result = Objects.hash(mother, father, pet);
+        result = 31 * result + Arrays.hashCode(children);
+        return result;
+    }
 }
